# dash_app_with_mlflow

./: .gitignore  README.md  pyproject.toml
dashapp/: index.py
dashapp/app/: __init__.py  app_utility.py  basisapp.py  embeded_app.py  userguide.md
dashapp/models/CI_polymer/: MLmodel  conda.yaml  feature_limits.json  model.pkl
dashapp/models/MFI_polymer/: MLmodel  feature_dtypes.json  feature_limits.json  model.pkl  model_parameters.json
dashapp/models/dashapp_model/: MLmodel  model.pkl  model_parameters.json
dashapp/models/dashapp_model2/: feature_dtypes.json  feature_limits.json
dump_models/: dump_mlflow_model.py  dump_mlflow_model_config.yaml
