[tool.poetry]
name = "dashapp_with_mlflow"
version = "0.1.0"
description = ""
authors = ["Heiko Kulinna <Heikokulinna@gmx.de>"]

[tool.poetry.dependencies]
python = "== 3.8.10"
pandas = "^1.3.4"
numpy = "*"
dash = "^2.0.0"
dash-html-components = "^2.0.0"
dash-daq = "^0.5.0"
dash-core-components = "^2.0.0"
azure-storage-blob = "==12.7.1"
azure-identity ="^1.7.0"

mlflow = "1.14.1"   
python-dotenv = "^0.19.1"

PyYAML = "^6.0"
pyarrow = "^6.0.0"
sklearn = ">=0.0"


[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
isort = "^5.8.0"
pre-commit = "^2.12.1"


[tool.black]
line-length = 79


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
